--- a/www/smsedge-fe/.editorconfig
+++ b/www/smsedge-fe/.editorconfig
@@ -4,10 +4,23 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-indent_size = 2
-insert_final_newline = true
+indent_size = 4
+insert_final_newline = false
 trim_trailing_whitespace = true
+end_of_line=lf
+
+[{.babelrc,.stylelintrc,.eslintrc,jest.config,*.json,*.jsb3,*.jsb2,*.bowerrc}]
+indent_style=space
+indent_size=4
+
+[{*.yml,*.yaml}]
+indent_style=space
+indent_size=4
+
+[tslint.json]
+indent_style=space
+indent_size=4
 
 [*.md]
 max_line_length = off
-trim_trailing_whitespace = false
+trim_trailing_whitespace = trues
