--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
 
     nginx-1.10-be:
-        image: maxnag/link-reduction-be:latest
-        container_name: link-reduction-be
+        image: maxnag/smsedge-be:latest
+        container_name: smsedge-be
         restart: always
         ports:
             - 8080:80
@@ -13,11 +13,11 @@ services:
             - php7.2-fpm
         working_dir: "/var/www/be"
         volumes:
-            - link-reduction-be:/var/www/be:rw
+            - smsedge-be:/var/www/be:rw
 
     nginx-1.10-fe:
-        image: maxnag/link-reduction-fe:latest
-        container_name: link-reduction-fe
+        image: maxnag/smsedge-fe:latest
+        container_name: smsedge-fe
         restart: always
         ports:
             - 80:80
@@ -27,23 +27,11 @@ services:
             - php7.2-fpm
         working_dir: "/var/www/fe"
         volumes:
-            - link-reduction-fe:/var/www/fe:rw
-
-    chat:
-        image: maxnag/link-reduction-fe:latest
-        container_name: chat
-        restart: always
-        ports:
-            - 90:90
-        environment:
-            VIRTUAL_HOST: chat-fe
-        working_dir: "/var/www/chat"
-        volumes:
-            - chat-fe:/var/www/chat:rw
+            - smsedge-fe:/var/www/fe:rw
 
     mysql-5.6:
-        image: maxnag/link-reduction-mysql:latest
-        container_name: link-reduction-be-mysql
+        image: maxnag/smsedge-mysql:latest
+        container_name: smsedge-be-mysql
         restart: always
         ports:
             - 3307:3306
@@ -51,24 +39,22 @@ services:
             - db-data:/docker-entrypoint-initdb.d
 
     php7.2-fpm:
-        image: maxnag/link-reduction-php:latest
-        container_name: link-reduction-be-php
+        image: maxnag/smsedge-php:latest
+        container_name: smsedge-be-php
         restart: always
         environment:
             TERM: xterm
             XDEBUG_CONFIG: remote_host=localhost
         working_dir: "/var/www/be"
         volumes:
-            - link-reduction-be:/var/www/be:rw
+            - smsedge-be:/var/www/be:rw
         links:
             - mysql-5.6
 
 volumes:
     db-data:
         external: false
-    link-reduction-be:
+    smsedge-be:
         external: false
-    link-reduction-fe:
-        external: false
-    chat-fe:
+    smsedge-fe:
         external: false
